--- a/cheerspal/pom.xml
+++ b/cheerspal/pom.xml
@@ -59,6 +59,17 @@
             <version>6.0.8</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
