--- a/cheerspal/src/main/resources/application.properties
+++ b/cheerspal/src/main/resources/application.properties
@@ -8,4 +8,12 @@ spring.datasource.username=cheerspaluser
 spring.datasource.password=cheerspalPassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+weather.api.key=a72afa2bb7159e1b29587b054f95cf9e
+weather.api.url=https://api.openweathermap.org/data/2.5/weather
+
 logging.level.org.springframework=DEBUG
+logging.level.org.springframework.web=TRACE
+logging.level.org.springframework.orm.jpa=TRACE
+logging.level.org.springframework.boot.autoconfigure.web.servlet.error=DEBUG
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web.servlet.error=DEBUG
