--- a/cheerspal/pom.xml
+++ b/cheerspal/pom.xml
@@ -70,6 +70,12 @@
             <version>0.0.20131108.vaadin1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
