--- a/cheerspal/pom.xml
+++ b/cheerspal/pom.xml
@@ -76,6 +76,12 @@
             <version>3.0.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-mock</artifactId>
+            <version>2.0.8</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
