add comment function

--- a/cheerspal/src/main/resources/application.properties
+++ b/cheerspal/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 weather.api.key=a72afa2bb7159e1b29587b054f95cf9e
 weather.api.url=https://api.openweathermap.org/data/2.5/weather
 
+unsplash.api.url=https://api.unsplash.com/photos/random
+unsplash.api.key=_5DAvLdkO1bqeSYbN37gVTv8b1kobBcaqnZ6a-rACEM
+
 logging.level.org.springframework=DEBUG
 logging.level.org.springframework.web=TRACE
 logging.level.org.springframework.orm.jpa=TRACE
